--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
 
         </div> 
-<!--        
+       
 
         <a href="https://www.google.com">Click here for Google</a> 
 
@@ -53,9 +53,9 @@
            
         <img src="Rockets3.jpg">
         </br>
-        <img src="copadomundo2.jpg"> -->
-         </br>
-         <img src="Spouse and Three Kids2.jpg">
+        <img src="copadomundo2.jpg">
+        </br>
+        <img src="Spouse and Three Kids2.jpg">
 
 
         <table>
